--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,24 +1,30 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <section class="text-gray-400 bg-gray-900 body-font">
-        <div class="container px-5 py-24 mx-auto">
-            <div class="flex flex-wrap -m-4">
-                {% for product in products %}
-                    <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
-                        <a class="block relative h-48 rounded overflow-hidden">
-                            <img alt="ecommerce" class="object-cover object-center w-full h-full block"
-                                src="{{ product.image_url }}">
-                        </a>
-                        <div class="mt-4">
-                            <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">CATEGORY</h3>
-                            <h2 class="text-white title-font text-lg font-medium">{{ product.name }}</h2>
-                            <p class="mt-1">${{ product.price }}</p>
-                            <!-- <p class="mt-1 text-gray-600">{{ product.stock }} available</p> -->
-                        </div>
-                    </div>
-                {% endfor %}
+<section class="text-gray-400 bg-gray-900 body-font">
+    <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-wrap w-full mb-20">
+            <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
+                <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Products</h1>
+                <div class="h-1 w-20 bg-blue-500 rounded"></div>
             </div>
         </div>
-    </section>
+        <div class="flex flex-wrap -m-4">
+            {% for product in products %}
+            <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
+                <a class="block relative h-48 rounded overflow-hidden">
+                    <img alt="ecommerce" class="object-cover object-center w-full h-full block"
+                        src="{{ product.image_url }}">
+                </a>
+                <div class="mt-4">
+                    <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">{{ product.category }}</h3>
+                    <h2 class="text-white title-font text-lg font-medium">{{ product.name }}</h2>
+                    <p class="mt-1">${{ product.price }}</p>
+                    <!-- <p class="mt-1 text-gray-600">{{ product.stock }} available</p> -->
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
 {% endblock %}
